--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
@@ -88,7 +88,13 @@
                     {
                         <tr>
                             <td>
-                                @string.Format("{0}, {1}, {2}", Model.Addresses.ToList()[i].Address.Postcode, Model.Addresses.ToList()[i].Address.AddressLine1, Model.Addresses.ToList()[i].Address.AddressLine4)
+                                @Model.Addresses.ToList()[i].Address.AddressLine1
+                                @if (!string.IsNullOrWhiteSpace(@Model.Addresses.ToList()[i].Address.AddressLine2))
+                                {
+                                    <br />@Model.Addresses.ToList()[i].Address.AddressLine2
+                                }
+                                <br />@Model.Addresses.ToList()[i].Address.AddressLine4 @Model.Addresses.ToList()[i].Address.Postcode
+
                                 @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.Postcode, new {@id = "addresses_" + i + "address__Postcode", Name = "Addresses[" + i + "].Address.Postcode"})
                                 @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine1, new {@id = "addresses_" + i + "address__AddressLine1", Name = "Addresses[" + i + "].Address.AddressLine1"})
                                 @Html.HiddenFor(m => Model.Addresses.ToList()[i].Address.AddressLine2, new {@id = "addresses_" + i + "address__AddressLine2", Name = "Addresses[" + i + "].Address.AddressLine2"})
@@ -146,10 +152,11 @@
                 <tbody id="location-addresses" data-bind="foreach: locationAddresses">
                 <tr>
                     <td>
-                        <span type="text" data-bind="text: itemFriendlyAddress()" maxlength="50" />
+                        <span type="text" data-bind="html: itemFriendlyAddress()" maxlength="50" />
                     </td>
                     <td>
-                        <input maxlength="4" pattern="[0-9]*" class="form-control qual-input-edit qual-year" type="text" data-bind="value: itemNumberOfPositions, attr:{'name':'Addresses[' + $index() +'].NumberOfPositions', 'id':'addresses_'+ $index() + '__numberofpositions' }">
+                        <input maxlength="5" pattern="[0-9]*" class="form-control qual-input-edit qual-year" type="text" data-bind="value: itemNumberOfPositions, attr:{'name':'Addresses[' + $index() +'].NumberOfPositions', 'id':'addresses_'+ $index() + '__numberofpositions'}">
+                        <span class="field-validation-valid" aria-live="polite" data-valmsg-replace="true" data-bind="attr:{'data-valmsg-for': 'Addresses[' + $index() +'].NumberOfPositions'}"></span>
                         <input type="hidden" data-bind="value: itemAddressLine1, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine1', 'id':'addresses_'+ $index() + 'address__AddressLine1' }">
                         <input type="hidden" data-bind="value: itemAddressLine2, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine2', 'id':'addresses_'+ $index() + 'address__AddressLine2' }">
                         <input type="hidden" data-bind="value: itemAddressLine3, attr:{'name':'Addresses[' + $index() +'].Address.AddressLine3', 'id':'addresses_'+ $index() + 'address__AddressLine3' }">
