--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
@@ -15,6 +15,7 @@
 }
 
 html:not(.touch) .editable-item {
+    border: 1px dotted #fff;
     .edit-comment-link {
         color: white;
         &:focus {
@@ -23,7 +24,7 @@ html:not(.touch) .editable-item {
     }       
     &:hover {
         background: rgba( 0, 0, 0, .025 );
-        outline: 1px dotted #d4d4d4;
+        border: 1px dotted #d4d4d4;
         .edit-comment-link {
             color: #005ea5;
         }
