--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_ValidationResultIcons.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_ValidationResultIcons.cshtml
@@ -1,6 +1,7 @@
 ﻿@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @model ValidationResultViewModel
     
+<a name="@Model.AnchorName"></a>
 @if (Model.HasWarning)
 {
     <a href="@Model.ViewValidationResultUrl"><i class="fa fa-flag the-icon" title="@Model.Warning"></i></a>
