--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/DateTime.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/DateTime.cshtml
@@ -1,5 +1,4 @@
-﻿@using System
-@model System.DateTime
+﻿@model DateTime
 @{
     var timeZoneInfo = TimeZoneInfo.FindSystemTimeZoneById("GMT Standard Time");
     var dataTimeByZoneId = TimeZoneInfo.ConvertTime(Model.ToUniversalTime(), timeZoneInfo);
