Adding warnings hash to prevent non obvious warnings behaviour

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
@@ -27,7 +27,8 @@
     @Html.Partial("ValidationSummary", ViewData.ModelState)
 
     @Html.HiddenFor(m => m.VacancyReferenceNumber)
-    @Html.HiddenFor(model => model.Status)
+    @Html.HiddenFor(m => m.Status)
+    @Html.HiddenFor(m => m.WarningsHash)
 
     <section>
         <div class="form-group">
